@@ -18,6 +18,7 @@ package org.jetbrains.kotlin.daemon
 
 import com.intellij.openapi.util.io.FileUtil
 import com.intellij.openapi.util.io.FileUtilRt
+import junit.framework.Assert
 import junit.framework.TestCase
 import org.jetbrains.kotlin.cli.AbstractCliTest
 import org.jetbrains.kotlin.cli.common.messages.MessageRenderer
@@ -160,14 +161,14 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
     fun testDaemonJvmOptionsParsing() {
         val backupJvmOptions = System.getProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY)
         try {
-            System.setProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, "-aaa,-bbb\\,ccc,-ddd,-Xmx200m,-XX:MaxPermSize=10k,-XX:ReservedCodeCacheSize=100,-xxx\\,yyy")
+            System.setProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, "-aaa,-bbb\\,ccc,-ddd,-Xmx200m,-XX:MaxMetaspaceSize=10k,-XX:ReservedCodeCacheSize=100,-xxx\\,yyy")
             val opts = configureDaemonJVMOptions(inheritMemoryLimits = false, inheritAdditionalProperties = false, inheritOtherJvmOptions = false)
             assertEquals("200m", opts.maxMemory)
-            assertEquals("10k", opts.maxPermSize)
+            assertEquals("10k", opts.maxMetaspaceSize)
             assertEquals("100", opts.reservedCodeCacheSize)
-            assertEquals(arrayListOf("aaa", "bbb,ccc", "ddd", "xxx,yyy"), opts.jvmParams)
+            assertEquals(arrayListOf("aaa", "bbb,ccc", "ddd", "xxx,yyy", "ea"), opts.jvmParams)
 
-            System.setProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, "-Xmx300m,-XX:MaxPermSize=10k,-XX:ReservedCodeCacheSize=100")
+            System.setProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, "-Xmx300m,-XX:MaxMetaspaceSize=10k,-XX:ReservedCodeCacheSize=100")
             val opts2 = configureDaemonJVMOptions(inheritMemoryLimits = false, inheritAdditionalProperties = false, inheritOtherJvmOptions = false)
             assertEquals("300m", opts2.maxMemory)
             assertEquals( -1, DaemonJVMOptionsMemoryComparator().compare(opts, opts2))
@@ -185,6 +186,53 @@ class CompilerDaemonTest : KotlinIntegrationTestBase() {
         finally {
             restoreSystemProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, backupJvmOptions)
         }
+    }
+
+    fun testDaemonAssertsOptions() {
+        val allAssetionsArgs = setOf(
+            "-ea", "-enableassertions",
+            "-da", "-disableassertions",
+            "-esa", "-enablesystemassertions",
+            "-dsa", "-disablesystemassertions"
+        )
+
+        fun assertionsJvmArgs() = configureDaemonJVMOptions(
+            inheritMemoryLimits = true,
+            inheritOtherJvmOptions = false,
+            inheritAdditionalProperties = true
+        ).mappers.flatMap { it.toArgs("-") }.filter { it in allAssetionsArgs }.joinToString(", ")
+
+        for (assertArgValue in allAssetionsArgs) {
+            withDaemonJvmOptionsSetTo(assertArgValue) {
+                Assert.assertEquals(assertArgValue, assertionsJvmArgs())
+            }
+        }
+
+        withDaemonJvmOptionsSetTo(null) {
+            Assert.assertEquals("-ea", assertionsJvmArgs())
+        }
+    }
+
+    private fun withDaemonJvmOptionsSetTo(newValue: String?, fn: () -> Unit) {
+        val backup = getAndSetSystemProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, newValue)
+
+        try {
+            fn()
+        } finally {
+            getAndSetSystemProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, backup)
+        }
+    }
+
+    private fun getAndSetSystemProperty(property: String, newValue: String?): String? {
+        val oldValue = System.getProperty(property)
+
+        if (newValue != null) {
+            System.setProperty(property, newValue)
+        } else {
+            System.clearProperty(property)
+        }
+
+        return oldValue
     }
 
     fun testDaemonOptionsParsing() {
